--- a/cf-templates/user-management.yaml
+++ b/cf-templates/user-management.yaml
@@ -6,9 +6,9 @@ Parameters:
   LambdaCodeKey:
     Type: String
     Description: S3 key of the Lambda deployment package
-  NodeLayerCodeKey:
+  NodeLayerARN:
     Type: String
-    Description: S3 key for the lambda node layer
+    Description: ARN of the node module layer
   AppConsoleUrl:
     Type: String
     Description: Console url
@@ -146,14 +146,6 @@ Resources:
                   - !Sub
                       - arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${PoolId}
                       - PoolId: !Ref UserPool
-  NodeLayer:
-    Type: AWS::Lambda::LayerVersion
-    Description: This is for the node module layer
-    Properties:
-      LayerName: NodeModuleLayer
-      Content:
-        S3Bucket: !Ref ResourceBucket
-        S3Key: !Ref NodeLayerCodeKey
   AuthLambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -161,14 +153,14 @@ Resources:
       Description: This lambda will invoke defined in lib/lambda/auth.js.
       Code:
         S3Bucket: !Ref ResourceBucket
-        S3Key: !Ref NodeLayerCodeKey
+        S3Key: !Ref LambdaCodeKey
       MemorySize: 1024
       Handler: lib/lambda/api/auth.handler
       Timeout: 60
       Runtime: nodejs22.x
       Role: !GetAtt AuthLambdaExecutionRole.Arn
       Layers:
-        - !Ref NodeLayer
+        - !Ref NodeLayerARN
       Environment:
         Variables:
           AWS_ACCOUNT_ID: !Ref AWS::AccountId
