--- a/cf-templates/main-stack.yaml
+++ b/cf-templates/main-stack.yaml
@@ -1,5 +1,5 @@
 
-# TODO: need to create the api gateway
+# TODO: need to create the api gateway (apis + websocket apis)
 
 
 # TODO: need to create the lambda execution roles for this api gateway
