--- a/cf-templates/bus-management.yaml
+++ b/cf-templates/bus-management.yaml
@@ -318,7 +318,8 @@ Resources:
               - Sid: APIGAccess
                 Effect: Allow
                 Action:
-                  - execute-api:ManageConnection
+                  - execute-api:ManageConnections
+                  - execute-api:Invoke
                 Resource:
                   - !Sub
                       - arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WSId}/*/POST/@connections/*
@@ -335,7 +336,7 @@ Resources:
       Handler: lib/lambda/websocket/send-location.handler
       Timeout: 60
       Runtime: nodejs22.x
-      Role: !GetAtt WSConnectLambdaExecutionRole.Arn
+      Role: !GetAtt WSSendLocationLambdaExecutionRole.Arn
       Layers:
         - !Ref NodeLayerARN
       Environment:
