--- a/cf-templates/general-service.yaml
+++ b/cf-templates/general-service.yaml
@@ -16,17 +16,37 @@ Parameters:
   PlatformApplicationARN:
     Type: String
     Description: ARN of the platform application arn
+  CustomerResourcesBucketARN:
+    Type: String
+    Description: ARN of the cutomer data stored bucket.
 Outputs:
   PlatformEndpointsARN:
     Description: ARN of PlatformEndpoints saved table.
     Value: !GetAtt PlatformEndpoints.Arn
   Notifications:
-    Description: ARN of Notifications table.
+    Description: ARN of Notifications saved table.
     Value: !GetAtt Notifications.Arn
-  NotificationLAmbdaARN:
-    Description: ARN of notification invoker lambda
+  LostAndFoundItems:
+    Description: ARN of lost and found items saved table.
+    Value: !GetAtt LostAndFoundItems.Arn
+  NotificationLambdaARN:
+    Description: ARN of notification invoker lambda.
     Value: !GetAtt NotificationInvoker.Arn
+  GeneralServiceLambdaARN:
+    Description: ARN of the general service lambda.
+    Value: !GetAtt GeneralServiceLambda.Arn
 Resources:
+  LostAndFoundItems:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: LostAndFoundItems
+      AttributeDefinitions:
+        - AttributeName: reporter_email
+          AttributeType: S
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: reporter_email
+          KeyType: HASH
   PlatformEndpoints:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -127,10 +147,91 @@ Resources:
           SYS_NOTIFI_TOPIC_ARN: !Ref SystemNotifications
           LOSTITEM_TOPIC_ARN: !Ref LostItmesNotifications
           PLATFORM_APPLICATION_ARN: !Ref PlatformApplicationARN
-  # todo: need to create lambda and lambdarole for the handle general services
-  NotificationQueue: 
+  GeneralServiceLambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: GeneralServiceLambdaExecutionRole
+      Description: This role give permissions for lambda to execute certain action on dynamodb,sqs,s3.
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: DynamodbAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: DynamodbAccess
+                Effect: Allow
+                Action:
+                  - dynamodb:GetItem
+                  - dynamodb:BatchGetItem
+                  - dynamodb:ConditionCheckItem
+                  - dynamodb:DescribeTable
+                  - dynamodb:GetRecords
+                  - dynamodb:Query
+                  - dynamodb:Scan
+                  - dynamodb:BatchWriteItem
+                  - dynamodb:DeleteItem
+                  - dynamodb:PutItem
+                  - dynamodb:UpdateItem
+                Resource:
+                  - !GetAtt LostAndFoundItems.Arn
+        - PolicyName: SQSAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: SQSAccess
+                Effect: Allow
+                Action:
+                  - sqs:SendMessage
+                  - sqs:DeleteMessage
+                  - sqs:PurgeQueue
+                Resource:
+                  - !GetAtt NotificationQueue.Arn
+        - PolicyName: S3Access
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: S3Access
+                Effect: Allow
+                Action:
+                  - s3:ListBucket
+                  - s3:GetAccessGrant
+                  - s3:GetObject
+                  - s3:DeleteObject
+                  - s3:PutObject
+                Resource:
+                  - !Ref CustomerResourcesBucketARN
+  GeneralServiceLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: GeneralServiceLambda
+      Description: This lambda will invoke defined in lib/lambda/api/general-service.js.
+      Code:
+        S3Bucket: !Ref ResourceBucket
+        S3Key: !Ref LambdaCodeKey
+      MemorySize: 1024
+      Handler: lib/lambda/api/general-service.handler
+      Timeout: 60
+      Runtime: nodejs22.x
+      Role: !GetAtt GeneralServiceLambdaExecutionRole.Arn
+      Layers:
+        - !Ref NodeLayerARN
+      Environment:
+        Variables:
+          AWS_ACCOUNT_ID: !Ref AWS::AccountId
+          APP_CONSOLE_URL: !Ref AppConsoleUrl
+  NotificationQueue:
     Type: AWS::SQS::Queue
-    Properties: 
+    Properties:
       QueueName: NotificationQueue
   LambdaSQSSourceMapping:
     Type: AWS::Lambda::EventSourceMapping
